--- a/css/calories.css
+++ b/css/calories.css
@@ -528,12 +528,48 @@ body.lock {
   padding: 0 15px;
 }
 
-.more-button {
-  background-color: #d81c2b;
-  padding: 15px;
-  font-size: 20px;
-  border-radius: 10px;
-  color: #ffffff;
+.red-button {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 4px;
+  border-width: 0;
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  min-height: 48px;
+  -webkit-transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s, -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  font-size: 18px;
+}
+.red-button:focus {
+  -webkit-box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+.red-button:hover {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+.red-button:active {
+  -webkit-box-shadow: #D6D6E7 0 3px 7px inset;
+          box-shadow: #D6D6E7 0 3px 7px inset;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+.red-button.active {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 
 .section-header {
@@ -575,6 +611,25 @@ body.lock {
   line-height: 29px;
   text-align: center;
   color: #ffffff;
+}
+.section-header .header__nav .header__nav-list .nav__item a {
+  position: relative;
+}
+.section-header .header__nav .header__nav-list .nav__item a::before {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  right: 0;
+  width: 0;
+  height: 2px;
+  background-color: #d81c2b;
+  -webkit-transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+}
+.section-header .header__nav .header__nav-list .nav__item a:hover::before {
+  left: 0;
+  right: auto;
+  width: 100%;
 }
 .section-header .header__nav .burger {
   width: 50px;
@@ -723,12 +778,48 @@ body.lock {
   padding: 0 15px;
 }
 
-.more-button {
-  background-color: #d81c2b;
-  padding: 15px;
-  font-size: 20px;
-  border-radius: 10px;
-  color: #ffffff;
+.red-button {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  border-radius: 4px;
+  border-width: 0;
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  cursor: pointer;
+  min-height: 48px;
+  -webkit-transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s;
+  transition: box-shadow 0.15s, transform 0.15s, -webkit-box-shadow 0.15s, -webkit-transform 0.15s;
+  font-size: 18px;
+}
+.red-button:focus {
+  -webkit-box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+.red-button:hover {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
+}
+.red-button:active {
+  -webkit-box-shadow: #D6D6E7 0 3px 7px inset;
+          box-shadow: #D6D6E7 0 3px 7px inset;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+.red-button.active {
+  -webkit-box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+          box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #720909 0 -4px 0 inset;
+  -webkit-transform: translateY(-2px);
+          transform: translateY(-2px);
 }
 
 footer.site-footer {
@@ -983,8 +1074,8 @@ footer.site-footer .social-icons a.dribbble:hover {
   height: 100px;
   background-color: rgba(221, 211, 211, 0.705);
   border-radius: 5px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 2px;
-          box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 2px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 5px;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 5px;
   -webkit-transition: all 0.15s ease-in;
   transition: all 0.15s ease-in;
   display: -webkit-box;
@@ -998,8 +1089,12 @@ footer.site-footer .social-icons a.dribbble:hover {
           justify-content: center;
 }
 .section-calories .calories__links .links__item a:hover {
-  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 11px;
-          box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 11px;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.section-calories .calories__links .links__item a:active {
+  -webkit-transform: scale(0.99) translateY(0.125rem);
+          transform: scale(0.99) translateY(0.125rem);
 }
 .section-calories .calories__links .links__item a img {
   max-width: 70px;
